--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
             <h1 class="header-logo"><a href="index.html" class="logo-link"><span class="met">Met</span>Burger</a></h1>
             <nav>
                 <ul class="nav-list">
-                    <li class="nav-element"><a href="index.html" class="nav-link active">Home</a></li>
+                    <li class="nav-element"><a href="index.html" class="nav-link">Home</a></li>
                     <li class="nav-element"><a href="menu.html" class="nav-link">Menu</a></li>
-                    <li class="nav-element"><a href="about.html" class="nav-link">About</a></li>
+                    <li class="nav-element"><a href="about.html" class="nav-link active">About</a></li>
                 </ul>
             </nav>
         </header>
