--- a/menu.html
+++ b/menu.html
@@ -17,33 +17,46 @@
             </nav>
         </header>
         <main>
-            <div class="landing-name landing-element">
-                <h1>MetBurger!</h2>
-                <h2>good burgers.</h3>
-            </div>
-            <div class="reservation landing-element">
-                <div class="reservation-header">
-                    <h2>Make a reservation</h2>
-                </div>
-                <form class="reservation-form">
-                    <div class="reservation-input">
-                        <label for="fname">First name:</label><br>
-                        <input type="text" id="fname">    
-                    </div>
-                    <div class="reservation-input">
-                        <label for="lname">Last name:</label><br>
-                        <input type="text" id="lname">    
-                    </div>
-                    <div class="reservation-input">
-                        <label for="guests">Amount of guests:</label><br>
-                        <input type="text" id="guests">    
-                    </div>
-                    <div class="reservation-input">
-                        <label for="special-needs">Special needs:</label><br>
-                        <input type="text" id="special-needs">    
-                    </div>
-                    <input class="reservation-submit" type="submit" id="complete" value="Complete reservation">
-                </form>
+            <div class="menu">
+                <h2>Menu:</h2>
+                <table>
+                    <tr>
+                        <td class="menu-item">
+                            <span class="dish-name">Hamburger</span>
+                            <span class="dish-price">9$</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu-item">
+                            <span class="dish-name">Cheeseburger</span>
+                            <span class="dish-price">10$</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu-item">
+                            <span class="dish-name">Vegan burger</span>
+                            <span class="dish-price">8$</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu-item">
+                            <span class="dish-name">Blue cheese burger</span>
+                            <span class="dish-price">12$</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu-item">
+                            <span class="dish-name">Spicy burger</span>
+                            <span class="dish-price">12$</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="menu-item">
+                            <span class="dish-name">Fries</span>
+                            <span class="dish-price">1.50$</span>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </main>
         <footer>
