--- a/about.html
+++ b/about.html
@@ -17,33 +17,18 @@
             </nav>
         </header>
         <main>
-            <div class="landing-name landing-element">
-                <h1>MetBurger!</h2>
-                <h2>good burgers.</h3>
-            </div>
-            <div class="reservation landing-element">
-                <div class="reservation-header">
-                    <h2>Make a reservation</h2>
-                </div>
-                <form class="reservation-form">
-                    <div class="reservation-input">
-                        <label for="fname">First name:</label><br>
-                        <input type="text" id="fname">    
-                    </div>
-                    <div class="reservation-input">
-                        <label for="lname">Last name:</label><br>
-                        <input type="text" id="lname">    
-                    </div>
-                    <div class="reservation-input">
-                        <label for="guests">Amount of guests:</label><br>
-                        <input type="text" id="guests">    
-                    </div>
-                    <div class="reservation-input">
-                        <label for="special-needs">Special needs:</label><br>
-                        <input type="text" id="special-needs">    
-                    </div>
-                    <input class="reservation-submit" type="submit" id="complete" value="Complete reservation">
-                </form>
+            <div class="about-page">
+                <p class="about-element">
+                    MetBurger was founded in 2020 by two students at osloMet.
+                    Their names are Fredrik and Peder, they have been making
+                    hamburgers since they were very young and decided that they
+                    wanted to fulfill their life long dream - selling hamburgers.
+                </p>
+                <p class="about-element">
+                    Metburger has only one restaurant yet, this is located at bislettgata123.
+                    MetBurger are however expanding rapidly and will by april 2021 have 2 new
+                    restaurants in oslo, one located at majorstua and one at jerbanetorget.
+                </p>
             </div>
         </main>
         <footer>
