--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
         <main>
             <div class="menu">
                 <h2>Menu:</h2>
-                <table>
+                <table class="menu-table">
                     <tr>
                         <td class="menu-item">
                             <span class="dish-name">Hamburger</span>
