--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
                     wanted to fulfill their life long dream - selling hamburgers.
                 </p>
                 <p class="about-element">
-                    Metburger has only one restaurant yet, this is located at bislettgata123.
-                    MetBurger are however expanding rapidly and will by april 2021 have 2 new
+                    MetBurger has only one restaurant yet, this is located at bislettgata123.
+                    We are however expanding rapidly and will by april 2021 have 2 new
                     restaurants in oslo, one located at majorstua and one at jerbanetorget.
                 </p>
             </div>
