--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <div class="landing-name landing-element">
                 <h1>MetBurger!</h2>
-                <h2>good burgers.</h3>
+                <h2>good burgers. test</h3>
             </div>
             <div class="reservation landing-element">
                 <div class="reservation-header">
