--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <th class="contact-header">Or dine with ut at: </th>
                 </tr>
                 <tr>
-                    <td class="contact-info">metburgerstreet42</td>
+                    <td class="contact-info">metburgerstreet42, 1243 Burgertown</td>
                 </tr>
             </table>
         </footer>
