--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                     <th class="contact-header">Or dine with ut at: </th>
                 </tr>
                 <tr>
-                    <td class="contact-info">metburgerstreet42</td>
+                    <td class="contact-info">Bislettgata123, 0123 Oslo</td>
                 </tr>
             </table>
         </footer>
